--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "next build && next export && touch out/.nojekyll && touch out/CNAME && echo safehouse.dev > out/CNAME && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "next": "10.0.3",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
